# tag-recommender

./: .dockerignore  .env.sample  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
docker/: Dockerfile
entrypoints/services/: run_rest.sh
notebooks/: 1_tags_eda.ipynb  2_split_dataset.ipynb  3_hashtags_normalization.ipynb  4_frequent_patterns.ipynb  5_frequent_patterns_pyspark.ipynb  6_topic_modelling.ipynb  7_tag_popularity_and_graph.ipynb  8_rest_service_performance_metrics.ipynb  co_occurence_performance_metrics.ipynb  rest_service_performance_metrics.ipynb
tag_recommender/: __main__.py  app.py  config.py  infer.py  logger.py
tag_recommender/load/: base.py
tag_recommender/process/: cli.py  factories.py  process.py  split.py  utils.py
tag_recommender/recommend/: base.py  cli.py  factories.py
tag_recommender/recommend/association_rules/: factories.py  model.py  utils.py
tag_recommender/recommend/co_occur/: factories.py  model.py  sketch.py
tag_recommender/recommend/lm/: dataset.py  model.py  utils.py
tag_recommender/recommend/tag2vec/: factories.py  tag2vec.py
tag_recommender/service/: cli.py  utils.py
tag_recommender/service/rest/: context.py  factories.py  schemas.py
tag_recommender/service/rest/routes/: base.py  health.py  recommend.py
tag_recommender/utils/: evaluate.py  general.py  text.py
tests/service/rest/: test_schemas.py
tests/utils/: test_evaluate.py  test_text.py
